--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -50,5 +50,7 @@
       </p>
     </div>
   </div>
-  <p class="footer__copyright">© 2019 - IceCream. <br />All Rights Reserved.</p>
+  <div class="footer__copyright--border">
+    <p class="footer__copyright">© 2019 - IceCream. All Rights Reserved.</p>
+  </div>
 </footer>
