--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,11 +1,7 @@
 .footer {
   background-color: #fff5f6;
 
-  @media screen and (min-width: 768px) {
-    br {
-      display: none;
-    }
-  }
+  
 
   &__parts {
     @media screen and (min-width: 768px) {
@@ -139,6 +135,8 @@
   &__tel {
     color: var(--accent-text-color);
   }
+  
+  &__copyright--border{border-top: 1px solid #e1e1e1;}
 
   &__copyright {
     font-weight: 700;
@@ -146,8 +144,14 @@
     line-height: 1.52;
     text-align: center;
     color: var(--secondary-text-color);
-    border-top: 1px solid #e1e1e1;
+   
     padding: 16px 20px 20px 20px;
+
+    @media screen and (max-width: 767px){
+      width: 180px;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
     @media screen and (min-width: 768px) {
       line-height: 1.86;
