--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -16,7 +16,7 @@
                     <br />
                     Aliquam erat volutpat. Aenean accumsan.
                 </p>
-                <button type="button" class="bnt btn-about">Read more 
+                <button type="button" class="btn btn-about">Read more 
                     <svg class="bnt-about__icon" width="8" height="16">
                         <use href="./images/icons/icons.svg#icon-btn-vector-red"></use>
                     </svg>
