--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -7,9 +7,9 @@
          background-image: linear-gradient(#FFFFFF 19%, #FFF5F6 19%);
     }
     @include media ($desk) {
-        // margin: 0 auto;
+       
         padding-bottom: 120px;
-        // max-width: 1600px;
+       
         background-image: linear-gradient(#FFFFFF 14%, #FFF5F6 14%);
      }
 }
@@ -36,8 +36,7 @@
 
 .catering__item {
    margin: 0 auto;
-//    width: 280px;
-//    height: 412px;
+
    border-radius: 24px;
    box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
    
@@ -48,7 +47,7 @@
 }
     @include media ($tab) {
     margin-bottom: 0px;
-    // height: 528px;
+
     width: calc((100% - 64px) / 3);
     &:not(:last-child) {
         margin-bottom: 0px;
@@ -56,12 +55,12 @@
 }
     @include media ($desk) {
     padding: 40px 40px;
-    // height: 538px;
+
 }
 }
 .cater-card {
    position:relative;
-//    border: 1px solid red; 
+
 }
 .catering__name {
     display: flex;
@@ -69,7 +68,7 @@
     justify-content: center;
     text-align: center;
     text-transform: uppercase;
-    // font-family: 'DM Sans';
+ 
     
     @include font(500, 12px, 22px, 0.04em);
    margin-bottom: 20px; 
@@ -97,11 +96,10 @@
 .cater-card__pic {
     position: relative;
 
-    // overflow: hidden;
     &:hover .cater-card_img,
     &:focus .cater-card_img {
         opacity: 1;
-        // transform: scale(1);
+        transform: scale(1);
     }
 }
 
@@ -116,7 +114,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    // transform: scale(0);
+    transform: scale(0);
     opacity: 0;
 
     transition: all 0.5s;
@@ -191,19 +189,15 @@ a {
     text-decoration: none;
 }
 .cater-cont {
-    
-    // width: 179px;
-    // height: 38px;
+
     @include font(500, 12px, 18px, null);
 @include media ($tab) {
     @include font(500, 14px, 26px, null);
-    // width: 159px;
-    // height: 48px;
+
 }
     @include media ($desk) {
         @include font(500, 16px, 29px, null);
-        // width: 243px;
-        // height: 50px;
+
     }
 }
 .cater-cont__link {
