--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -119,13 +119,13 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: row;
-    margin: -16px;
+    margin-left: -16px;
   }
 
   @media screen and (min-width: 1280px) {
     display: flex;
     flex-direction: row;
-    margin: -32px;
+    margin-left: -32px;
   }
 }
 
@@ -143,18 +143,18 @@
   }
 
   @media screen and (min-width: 768px) {
-    flex-basis: calc((100% - 32px) / 2);
-    margin: 16px;
+    width: calc((100% - 16px) / 2);
+    margin-left: 16px;
     padding-left: 32px;
     padding-right: 32px;
     padding-top: 118px;
   }
 
   @media screen and (min-width: 1280px) {
-    flex-basis: calc((100% - 64px) / 2);
-    margin: 32px;
-    padding-left: 77px;
-    padding-right: 77px;
+    width: calc((100% - 32px) / 2);
+    margin-left: 32px;
+    padding-left: 75px;
+    padding-right: 75px;
     padding-top: 165px;
     padding-bottom: 60px;
   }
